--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@figmentio/slate": "^1.10.0",
     "cross-fetch": "^3.1.5",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "localtunnel": "^2.0.2",
     "memory-cache": "^0.2.0",
     "near-api-js": "^1.1.0",
