--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,5 @@
+# API_KEY is for Figment API Keys only
 API_KEY=
+
+# A JSON-RPC node provider like Alchemy is needed for ETH demo
+ALCHEMY_API_KEY=
